--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
     <title>The Wasteland Symphony</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -13,6 +14,14 @@
     <div class="container">
         <header>
             <h1>THE WASTELAND SYMPHONY</h1>
+             <div class="social-icons">
+                <a href="https://github.com/the-code-rider" target="_blank" class="icon-link">
+                    <i class="fab fa-github"></i>
+                </a>
+                <a href="https://twitter.com/harshit_leo" target="_blank" class="icon-link">
+                    <i class="fab fa-twitter"></i>
+                </a>
+            </div>
         </header>
 
             <div class="song-videos">
@@ -25,19 +34,19 @@
                 <div class="video-column">
                     <h2>2. Storm Inside</h2>
                     <video controls>
-                        <source src="storm_inside_music_video.mp4" type="video/mp4">
+                        <source src="videos/storm_inside_music_video.mp4" type="video/mp4">
                     </video>
                 </div>
                 <div class="video-column">
                     <h2>3. Barren Hope</h2>
                     <video controls>
-                        <source src="barren_hope_music_video.mp4" type="video/mp4">
+                        <source src="videos/barren_hope_music_video.mp4" type="video/mp4">
                     </video>
                 </div>
                 <div class="video-column">
                     <h2>4. Fall Of Titans</h2>
                     <video controls>
-                        <source src="fall_of_titans_music_video.mp4" type="video/mp4">
+                        <source src="videos/fall_of_titans_music_video.mp4" type="video/mp4">
                     </video>
                 </div>
                 </div>
